--- a/src/templates/components/bomb.pug
+++ b/src/templates/components/bomb.pug
@@ -1,31 +1,31 @@
 section.bomb.block
   .container
-    h2.bomb--title.title Грыжа — <br> бомба замедленного действия
-    h3.bomb--subtitle.subtitle.title--line Она может ущемиться в любой момент!
-    ul.bomb--list.danger.list--line
-      li.danger--item
-        p.danger--text Грыжа опасна вероятностью ущемления
-        .danger--img_wrapper
+    h2.bomb__title.title Грыжа — <br> бомба замедленного действия
+    h3.bomb__subtitle.subtitle.title__line Она может ущемиться в любой момент!
+    ul.bomb__list.danger.list__line
+      li.danger__item
+        p.danger__text Грыжа опасна вероятностью ущемления
+        .danger__img_wrapper
           picture
             source(srcset="img/danger__01.webp", type="image/webp")
-            img.danger--img(src="img/danger__01.png", alt="image", loading="lazy")
-      li.danger--item
-        p.danger--text Это может произойти при чрезмерной физической нагрузке и даже запоре
-        .danger--img_wrapper
+            img.danger__img(src="img/danger__01.png", alt="image", loading="lazy")
+      li.danger__item
+        p.danger__text Это может произойти при чрезмерной физической нагрузке и даже запоре
+        .danger__img_wrapper
           picture
             source(srcset="img/danger__02.webp", type="image/webp")
-            img.danger--img(src="img/danger__02.png", alt="image", loading="lazy")
-      li.danger--item
-        p.danger--text Ущемление органов приводит к некрозу и нагноению
-        .danger--img_wrapper
+            img.danger__img(src="img/danger__02.png", alt="image", loading="lazy")
+      li.danger__item
+        p.danger__text Ущемление органов приводит к некрозу и нагноению
+        .danger__img_wrapper
           picture
             source(srcset="img/danger__03.webp", type="image/webp")
-            img.danger--img(src="img/danger__03.jpg", alt="image", loading="lazy")
-      li.danger--item
-        p.danger--text Тогда пациент попадает в хирургию и ложится на операцию
-        .danger--img_wrapper
+            img.danger__img(src="img/danger__03.jpg", alt="image", loading="lazy")
+      li.danger__item
+        p.danger__text Тогда пациент попадает в хирургию и ложится на операцию
+        .danger__img_wrapper
           picture
             source(srcset="img/danger__04.webp", type="image/webp")
-            img.danger--img(src="img/danger__04.png", alt="image", loading="lazy")
-    p.bomb--bottom_text Но даже если вы избегаете поднятия тяжелых предметов и следите за здоровьем,
+            img.danger__img(src="img/danger__04.png", alt="image", loading="lazy")
+    p.bomb__bottom_text Но даже если вы избегаете поднятия тяжелых предметов и следите за здоровьем,
       span.text__orange это не гарантирует того, что вы избежите операции!
