--- a/src/templates/components/complications.pug
+++ b/src/templates/components/complications.pug
@@ -1,38 +1,38 @@
 section.complications.block.bg
   .container
-    h2.complications--title.title.title--line Со временем <br> даже при неущемленной грыже развиваются осложнения
-    ul.complications--list
-      li.complications--item
-        .complications--img_wrapper
+    h2.complications__title.title.title__line Со временем <br> даже при неущемленной грыже развиваются осложнения
+    ul.complications__list
+      li.complications__item
+        .complications__img_wrapper
           picture
             source(srcset="img/complications__01.webp", type="image/webp")
-            img.complications--img(src="img/complications__01.jpg", alt="image", loading="lazy")
-        h3.complications--header Воспаление
-        p.complications--text Грыжа может 
+            img.complications__img(src="img/complications__01.jpg", alt="image", loading="lazy")
+        h3.complications__header Воспаление
+        p.complications__text Грыжа может 
           span.text__blue инфицироваться и воспалиться
           | . Это приводит к высокой температуре, рвоте, запорам, болям.
-      li.complications--item
-        .complications--img_wrapper
+      li.complications__item
+        .complications__img_wrapper
           picture
             source(srcset="img/complications__02.webp", type="image/webp")
-            img.complications--img(src="img/complications__02.jpg", alt="image", loading="lazy")
-        h3.complications--header Невправимость
-        p.complications--text Со временем от грыжи уже не избавиться ручным вправлением. Она становится больше, выпирает из-под одежды.
+            img.complications__img(src="img/complications__02.jpg", alt="image", loading="lazy")
+        h3.complications__header Невправимость
+        p.complications__text Со временем от грыжи уже не избавиться ручным вправлением. Она становится больше, выпирает из-под одежды.
           span.text__blue  Поможет только операция.
-      li.complications--item
-        .complications--img_wrapper
+      li.complications__item
+        .complications__img_wrapper
           picture
             source(srcset="img/complications__03.webp", type="image/webp")
-            img.complications--img(src="img/complications__03.jpg", alt="image", loading="lazy")
-        h3.complications--header Скопление кала в кишечнике
-        p.complications--text Возникает, если в грыжевом мешке находится толстая кишка. Приводит к
+            img.complications__img(src="img/complications__03.jpg", alt="image", loading="lazy")
+        h3.complications__header Скопление кала в кишечнике
+        p.complications__text Возникает, если в грыжевом мешке находится толстая кишка. Приводит к
           span.text__blue  болезненным запорам.
-      li.complications--item
-        .complications--img_wrapper
+      li.complications__item
+        .complications__img_wrapper
           picture
             source(srcset="img/complications__04.webp", type="image/webp")
-            img.complications--img(src="img/complications__04.jpg", alt="image", loading="lazy")
-        h3.complications--header Дисфункция органов
-        p.complications--text Органы, которые попадают в грыжу, прекращают функционировать. Возникает острая
+            img.complications__img(src="img/complications__04.jpg", alt="image", loading="lazy")
+        h3.complications__header Дисфункция органов
+        p.complications__text Органы, которые попадают в грыжу, прекращают функционировать. Возникает острая
           span.text__blue  нестерпимая боль 
           | в области “отмирающих” органов, поднимается температура.
