--- a/src/templates/components/composition.pug
+++ b/src/templates/components/composition.pug
@@ -1,38 +1,38 @@
 section.composition.block.bg
   .container
-    h2.composition--title.title.title--line Состав 
+    h2.composition__title.title.title__line Состав 
       span.text__orange Трауфрила
       | ,<br> благодаря которому он — единственная альтернатива операции
-    .composition--wrapper__main
-      .composition--wrapper__left
+    .composition__wrapper__main
+      .composition__wrapper__left
         picture
           source(media="(max-width: 767px)", srcset="img/prod_mob.webp", type="image/webp")
           source(media="(max-width: 767px)", srcset="img/prod_mob.png")
           source(srcset="img/prod.webp", type="image/webp")
-          img.composition--prod(src="img/prod.png", alt="")
-      //- .composition--wrapper__right
-      ul.composition--list
-        li.composition--item
+          img.composition__prod(src="img/prod.png", alt="")
+      //- .composition__wrapper__right
+      ul.composition__list
+        li.composition__item
           picture
             source(srcset="img/composition__01.webp", type="image/webp")
-            img.composition--img(src="img/composition__01.png", alt="")
-          .composition--text_wrapper
-            h3.composition--header Протеины крови марала и&nbsp;бобрового мускуса
-            p.composition--text способствует уменьшению грыжи восстанавливая стенки брюшной полости и повышая эластичность
-        li.composition--item
+            img.composition__img(src="img/composition__01.png", alt="")
+          .composition__text_wrapper
+            h3.composition__header Протеины крови марала и&nbsp;бобрового мускуса
+            p.composition__text способствует уменьшению грыжи восстанавливая стенки брюшной полости и повышая эластичность
+        li.composition__item
           picture
             source(srcset="img/composition__02.webp", type="image/webp")
-            img.composition--img(src="img/composition__02.png", alt="")
-          .composition--text_wrapper
-            h3.composition--header Экстракт леспедецы и&nbsp;прополиса
-            p.composition--text устраняет боль и предотвращает отмирание органов нормализуя внутрибрюшное давление
-        li.composition--item
+            img.composition__img(src="img/composition__02.png", alt="")
+          .composition__text_wrapper
+            h3.composition__header Экстракт леспедецы и&nbsp;прополиса
+            p.composition__text устраняет боль и предотвращает отмирание органов нормализуя внутрибрюшное давление
+        li.composition__item
           picture
             source(srcset="img/composition__03.webp", type="image/webp")
-            img.composition--img(src="img/composition__03.png", alt="")
-          .composition--text_wrapper
-            h3.composition--header Концентрат кровохлебки и&nbsp;любистка
-            p.composition--text избавляет от риска ущемления грыжи улучшая кровообращение и эластичность стенок ущемленных органов
-    a.composition--button.btn.bold.ever-popup-btn
-      span.btn--biger_text Заказать 
-      span.btn--smaller_text со скидкой
+            img.composition__img(src="img/composition__03.png", alt="")
+          .composition__text_wrapper
+            h3.composition__header Концентрат кровохлебки и&nbsp;любистка
+            p.composition__text избавляет от риска ущемления грыжи улучшая кровообращение и эластичность стенок ущемленных органов
+    a.composition__button.btn.bold.ever-popup-btn
+      span.btn__biger_text Заказать 
+      span.btn__smaller_text со скидкой
