--- a/src/templates/components/doctor.pug
+++ b/src/templates/components/doctor.pug
@@ -1,26 +1,26 @@
 section.doctor.block.bg
   .container
-    h2.doctor--title.title Слово специалисту:
-    .doctor--wrapper
-      .doctor--wrapper_doc
+    h2.doctor__title.title Слово специалисту:
+    .doctor__wrapper
+      .doctor__wrapper_doc
         picture
           source(media="(max-width: 767px)", srcset="img/doctor_mob.webp", type="image/webp")
           source(media="(max-width: 767px)", srcset="img/doctor_mob.png")
           source(srcset="img/doctor.webp", type="image/webp")
-          img.doctor--photo(src="img/doctor.png", alt="Doctor" loading="lazy")
-        p.doctor--name.header__text Алексей Колесников,
-        p.doctor--speciality.text__orange врач-хирург
-        p.doctor--experiance стаж работы:
+          img.doctor__photo(src="img/doctor.png", alt="Doctor" loading="lazy")
+        p.doctor__name.header__text Алексей Колесников,
+        p.doctor__speciality.text__orange врач-хирург
+        p.doctor__experiance стаж работы:
           span.header__text 18 лет 
-      .doctor--wrapper_text
-        h3.doctor--header.header__text “Пока болезнь не запущена - лучше лечить её растительными препаратами”
-        p.doctor--subtitle.text__black врач-хирург высшей категории, кандидат медицинских наук 
+      .doctor__wrapper_text
+        h3.doctor__header.header__text “Пока болезнь не запущена - лучше лечить её растительными препаратами”
+        p.doctor__subtitle.text__black врач-хирург высшей категории, кандидат медицинских наук 
           span.bold.text__orange Алексей Колесников
-        p.doctor--text Несмотря на то, что я всю жизнь проработал хирургом и всегда относился, так сказать, к лагерю традиционной медицины, я часто выписываю людям средства из народной медицины. Объясняю почему: хирургические методы борьбы с грыжей предназначены для людей, у которых уже запущенные случаи. 
-        p.doctor--text В случае с грыжей, я могу помочь человеку, когда нужно уже делать операцию, когда произошло защемление грыжи. Однако, когда у человека всё хорошо, и 
+        p.doctor__text Несмотря на то, что я всю жизнь проработал хирургом и всегда относился, так сказать, к лагерю традиционной медицины, я часто выписываю людям средства из народной медицины. Объясняю почему: хирургические методы борьбы с грыжей предназначены для людей, у которых уже запущенные случаи. 
+        p.doctor__text В случае с грыжей, я могу помочь человеку, когда нужно уже делать операцию, когда произошло защемление грыжи. Однако, когда у человека всё хорошо, и 
           span.bold.text__black грыжа только немного выпирает - я считаю, что здесь не нужно делать операцию.
           | Такому человеку будут намного полезнее народные методы, препараты на травах, например. Ведь здесь можно обойтись без радикальных методов, эту проблему можно решить щадящим образом без риска для здоровья.
-        p.doctor--text Из всех растительных формул мне больше всего нравится состав Трауфрила - он самый эффективный, и это подтвердили результаты клиники, в которой я работаю. 
+        p.doctor__text Из всех растительных формул мне больше всего нравится состав Трауфрила - он самый эффективный, и это подтвердили результаты клиники, в которой я работаю. 
           span.bold.text__black Этот препарат помогает свести грыжу на нет без вреда для пациента.
           | Я рекомендую его всем, кто приходит ко мне с грыжей и хочет избежать операции. И взрослым, и детям.
-        img.doctor--sign(src="img/sign.png", alt="Sign")
+        img.doctor__sign(src="img/sign.png", alt="Sign")
