--- a/src/styles/components/delivery.scss
+++ b/src/styles/components/delivery.scss
@@ -1,26 +1,26 @@
 .delivery {
   
 
-  &--list {
+  &__list {
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
   }
-  &--item {
+  &__item {
     max-width: 370px;
     &:not(:last-child) {
       margin-bottom: 20px;
     }
   }
-  &--img {
+  &__img {
     max-width: 240px;
     margin: 0 auto 10px;
   }
-  &--header {
+  &__header {
     font-size: 22px;
   }
-  &--text {
+  &__text {
     font-size: 17px;
   }
 }
