--- a/src/styles/components/doctor.scss
+++ b/src/styles/components/doctor.scss
@@ -1,41 +1,41 @@
 .doctor {
-  &--title {
+  &__title {
     margin-bottom: 15px;
   }
-  &--wrapper_doc {
+  &__wrapper_doc {
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
     margin-bottom: 15px;
   }
-  &--name {
+  &__name {
     font-size: 22px;
   }
 
-  &--speciality {
+  &__speciality {
     font-size: 17px;
     font-style: italic;
   }
-  &--experiance {
+  &__experiance {
     font-size: 17px;
   }
-  &--header {
+  &__header {
     margin-bottom: 10px;
     font-size: 26px;
   }
 
-  &--subtitle {
+  &__subtitle {
     margin-bottom: 15px;
     .text__orange {
       font-size: 20px;
     }
   }
-  &--text {
+  &__text {
     margin-bottom: 10px;
     font-size: 17px;
   }
-  &--sign {
+  &__sign {
     margin-left: auto;
   }
 }
