--- a/src/styles/components/promo.scss
+++ b/src/styles/components/promo.scss
@@ -32,7 +32,7 @@
     }
   }
 
-  &--mid_wrapper {
+  &__mid_wrapper {
     @include rm(640) {
       display: flex;
       flex-wrap: wrap;
@@ -45,7 +45,7 @@
     }
   }
 
-  &--top_wrapper {
+  &__top_wrapper {
     margin-bottom: 15px;
     @include rm(1024) {
       display: flex;
@@ -57,7 +57,7 @@
     }
   }
 
-  &--logo {
+  &__logo {
     margin: 0 auto;
     @include rm(1024) {
       margin-right: 30px;
@@ -67,7 +67,7 @@
     }
   }
 
-  &--excellence {
+  &__excellence {
     display: none;
     @include rm(1024) {
       display: flex;
@@ -79,7 +79,7 @@
       align-items: center;
       font-size: 14px;
     }
-    &--item {
+    &__item {
       position: relative;
       padding-left: 50px;
       @include rm(1220) {
@@ -110,7 +110,7 @@
     }
   }
 
-  &--main_text {
+  &__main_text {
     @include rm(1024) {
       max-width: 390px;
     }
@@ -119,7 +119,7 @@
     }
   }
 
-  &--title {
+  &__title {
     margin-bottom: 15px;
     @include rm(1024) {
       margin-right: -140px;
@@ -131,7 +131,7 @@
     }
   }
 
-  &--subtitle {
+  &__subtitle {
     margin-bottom: 15px;
     font-size: 22px;
     text-align: center;
@@ -152,12 +152,12 @@
     }
   }
 
-  &--support {
+  &__support {
     margin-bottom: 20px;
   }
 
 
-  &--product {
+  &__product {
     position: relative;
     display: flex;
     justify-content: center;
@@ -216,7 +216,7 @@
     margin: 0;
   }
 
-  &--item {
+  &__item {
     position: relative;
     padding-left: 25px;
 
