--- a/src/styles/components/stop.scss
+++ b/src/styles/components/stop.scss
@@ -1,10 +1,10 @@
 .stop {
 
-  &--title {
+  &__title {
     margin-bottom: 15px;
   }
 
-  &--subtitle {
+  &__subtitle {
     margin-bottom: 20px;
 
     @include rm(1024) {
@@ -22,7 +22,7 @@
     }
   }
 
-  &--big_yellow {
+  &__big_yellow {
     font-size: 29px;
     color: #f9da63;
     line-height: 1;
@@ -40,7 +40,7 @@
     }
   }
 
-  &--list {
+  &__list {
     margin-bottom: 30px;
     @include rm(1024) {
       display: flex;
@@ -49,7 +49,7 @@
     }
   }
 
-  &--item {
+  &__item {
     max-width: 370px;
     margin: 0 auto;
     
@@ -79,7 +79,7 @@
     }
   }
 
-  &--img {
+  &__img {
     max-width: 300px;
     margin: 0 auto 10px;
     border-radius: 15px;
@@ -96,10 +96,10 @@
     }
   }
 
-  &--text_wrapper {
+  &__text_wrapper {
   }
 
-  &--header {
+  &__header {
     margin-bottom: 10px;
     color: $black-color;
     font-weight: 900;
@@ -129,7 +129,7 @@
     }
   }
 
-  &--text {
+  &__text {
     color: $grey-text-color;
     text-align: center;
     @include rm(640) {
@@ -143,7 +143,7 @@
     }
   }
 
-  &--bottom {
+  &__bottom {
     font-weight: 900;
     color: $black-color;
     text-align: center;
