--- a/src/templates/components/form.pug
+++ b/src/templates/components/form.pug
@@ -1,12 +1,12 @@
 form.form.x_order_form(action="/submit", method="post")
-  label.form--label.form--label__name
+  label.form__label.form__label__name
     svg(viewBox="0 0 18 24", width="18")
         use(xlink:href="#user")
-    input.form--input(type="text", name="name", placeholder="Имя", required)
-  label.form--label.form--label__phone
+    input.form__input(type="text", name="name", placeholder="Имя", required)
+  label.form__label.form__label__phone
     svg(viewBox="0 0 18 20", width="18")
       use(xlink:href="#phone")
-    input.form--input(type="tel", name="phone", placeholder="Телефон", required)
-  button.form--button.btn.bold(type="submit")
-    span.btn--biger_text Заказать 
-    span.btn--smaller_text со скидкой
+    input.form__input(type="tel", name="phone", placeholder="Телефон", required)
+  button.form__button.btn.bold(type="submit")
+    span.btn__biger_text Заказать 
+    span.btn__smaller_text со скидкой
