--- a/src/templates/components/order.pug
+++ b/src/templates/components/order.pug
@@ -1,14 +1,14 @@
 .order
-  span.order--discount -50
-    span.order--discount_percent %
-  h3.order--date.bold.text__black Успей заказать по промо-цене
+  span.order__discount -50
+    span.order__discount_percent %
+  h3.order__date.bold.text__black Успей заказать по промо-цене
     span.text__orange  до 
       span.date-0  31.31.2020
   include price
-  p.order--pack.text__black Осталось
+  p.order__pack.text__black Осталось
     span.lastpack.text__orange.bold  60
     |  упаковок со скидкой
   include form
-  p.order--protect Ваши данные защищены!
+  p.order__protect Ваши данные защищены!
     svg(viewBox="0 0 22 24", width="22")
       use(xlink:href="#secure")
