--- a/src/templates/components/price.pug
+++ b/src/templates/components/price.pug
@@ -1,11 +1,11 @@
 .price
-  .price--old
-    p.price--name Старая цена:
-    p.price--wrapper
+  .price__old
+    p.price__name Старая цена:
+    p.price__wrapper
       span.x_price_previous 1999
       span.x_currency  ryb.
-  .price--new
-    p.price--name Новая цена:
-    p.price--wrapper
+  .price__new
+    p.price__name Новая цена:
+    p.price__wrapper
       span.x_price_current 999
       span.x_currency  ryb.
