--- a/src/styles/components/doctor.scss
+++ b/src/styles/components/doctor.scss
@@ -1,13 +1,53 @@
 .doctor {
-  &__title {
-    margin-bottom: 15px;
+  @include rm(1220) {
+    background: #f1f2f8 url(../img/doctor__bg.jpg) no-repeat;
+    background-position: left calc(50% - 385px) top calc(50% - 75px);
   }
+  &__wrapper {
+    @include rm(1024) {
+      display: flex;
+      flex-direction: row-reverse;
+      justify-content: space-between;
+      align-items: center;
+    }
+    @include rm(1220) {
+      align-items: flex-end;
+    }
+  }
+  
   &__wrapper_doc {
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
     margin-bottom: 15px;
+    @include rm(1024) {
+      min-width: 300px;
+      margin: 0 20px 0 0;
+    }
+    @include rm(1220) {
+      position: relative;
+      padding: 420px 0 50px;
+      margin: 0 30px 0 0;
+    }
+  }
+
+  &__photo {
+    @include rm(1220) {
+      position: absolute;
+      max-width: 351px;
+      top: 0;
+      left: calc(50% - 180px);
+    }
+  }
+  &__title {
+    margin-bottom: 15px;
+    @include rm(1024) {
+      text-align: left;
+    }
+    @include rm(1220) {
+      margin-bottom: 30px;
+    }
   }
   &__name {
     font-size: 22px;
@@ -23,10 +63,18 @@
   &__header {
     margin-bottom: 10px;
     font-size: 26px;
+    
+    @include rm(1220) {
+      font-size: 32px;
+      margin-bottom: 20px;
+    }
   }
 
   &__subtitle {
     margin-bottom: 15px;
+    @include rm(1220) {
+      margin-bottom: 30px;
+    }
     .text__orange {
       font-size: 20px;
     }
@@ -34,6 +82,9 @@
   &__text {
     margin-bottom: 10px;
     font-size: 17px;
+    @include rm(1220) {
+      margin-bottom: 20px;
+    }
   }
   &__sign {
     margin-left: auto;
